--- a/DotNetCoreWebAPI-Project/web-api/web-api.csproj
+++ b/DotNetCoreWebAPI-Project/web-api/web-api.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.CodeCoverage" Version="16.6.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.4">
 			<PrivateAssets>all</PrivateAssets>
