--- a/DotNetCoreWebAPI-Project/web-api-tests/web-api-tests.csproj
+++ b/DotNetCoreWebAPI-Project/web-api-tests/web-api-tests.csproj
@@ -8,6 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Cake" Version="0.37.0" />
+		<PackageReference Include="Cake.FileHelpers" Version="3.2.1" />
 		<PackageReference Include="Microsoft.CodeCoverage" Version="16.6.1" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
